unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/ET_Workforce_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Workforce Quote Item</label>
    <nameField>
        <displayFormat>WQI-{0000}</displayFormat>
        <label>Workforce Quote Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workforce Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>