unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Additional_Work_Permit_Fees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Work_Permit_Fees__c</fullName>
    <label>Additional Work Permit Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>