unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Children_allowance_from_master__c.field-meta.xml
<CustomField>
    <fullName>Children_allowance_from_master__c</fullName>
    <label>Children allowance from master</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>