unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Cost_of_Living_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Living_Allowance__c</fullName>
    <label>Cost of Living Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>