unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Air_Tickets__c.field-meta.xml
<CustomField>
    <fullName>ET_Air_Tickets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Air Tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>