unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Allowed_profit_Additions_Discounts__c.field-meta.xml
<CustomField>
    <fullName>ET_Allowed_profit_Additions_Discounts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allowed profit (Additions/Discounts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>