unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Annual_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>ET_Annual_Profit_Margin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>