unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Client_Classification__c.field-meta.xml
<CustomField>
    <fullName>ET_Client_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>