unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Clothes_Allowance__c.field-meta.xml
<CustomField>
    <fullName>ET_Clothes_Allowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Clothes Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>