unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>ET_Contract_Period__c</fullName>
    <label>Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>