unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Depreciation_Method__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Depreciation Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>