unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Discounts_Additional_Profit__c.field-meta.xml
<CustomField>
    <fullName>ET_Discounts_Additional_Profit__c</fullName>
    <label>Discounts/Additional Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>