unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_End_of_Service__c.field-meta.xml
<CustomField>
    <fullName>ET_End_of_Service__c</fullName>
    <defaultValue>0</defaultValue>
    <label>End of Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>