unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Health_Card__c.field-meta.xml
<CustomField>
    <fullName>ET_Health_Card__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Health Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>