unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Number_of_Workforce__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Workforce__c</fullName>
    <label>Number of Workforce</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>