unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>