unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Remainig_Depreciation_of_10_Years__c.field-meta.xml
<CustomField>
    <fullName>ET_Remainig_Depreciation_of_10_Years__c</fullName>
    <label>Remainig Depreciation of 10 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>