unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Reserve_Rate__c</fullName>
    <label>Reserve Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>