unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Service_Emirate__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Emirate__c</fullName>
    <formula>text( ET_Work_force_Request__r.ET_Service_Emirate__c )</formula>
    <label>Service Emirate</label>
    <type>Text</type>
</CustomField>