unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Total_Direct_Operational_Costs__c.field-meta.xml
<CustomField>
    <fullName>ET_Total_Direct_Operational_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Direct Operational Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>