unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Visa_amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Visa_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Visa amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>