unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Workforce_basic_salary__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_basic_salary__c</fullName>
    <label>Workforce basic salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>