unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Workforce_cost_per_each_vehicle__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_cost_per_each_vehicle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workforce cost per each vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>