unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Workforce_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_Line_Number__c</fullName>
    <label>Workforce Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>