unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/ET_Workforce_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>