unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Housing_Allowance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Housing_Allowance_Percentage__c</fullName>
    <label>Housing Allowance(%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>