unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Line_number_from_input__c.field-meta.xml
<CustomField>
    <fullName>Line_number_from_input__c</fullName>
    <label>Line number from input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>