unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Manpower_Profit_Value_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Manpower_Profit_Value_Discounted__c</fullName>
    <label>Manpower Profit Value(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>