unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Number_of_End_of_Service_months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_End_of_Service_months__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of End of Service months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>