unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Profit_Percentage_from_Master__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percentage_from_Master__c</fullName>
    <label>Profit Percentage from Master</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>