unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Reliever_cost_per_main_workforce__c.field-meta.xml
<CustomField>
    <fullName>Reliever_cost_per_main_workforce__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reliever cost per main workforce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>