unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Reserve_Cost_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Cost_Target_Prices__c</fullName>
    <label>Reserve Cost Target Prices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>