unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>Expat</fullName>
            </value>
            <value>
                <fullName>GCC National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>