unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Total_Cost_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Target_Prices__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cost(Target Prices)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>