unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Total_dynamic_other_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_dynamic_other_cost__c</fullName>
    <label>Total dynamic other cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>