unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Total_Value_Of_Rental__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Of_Rental__c</fullName>
    <label>Total Value Of Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>