unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Transport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Allowance__c</fullName>
    <label>Transport Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>