unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Workforce_cost_per_each_veh_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Workforce_cost_per_each_veh_Discounted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workforce cost per each veh(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>