unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Workforce_cost_per_each_veh_Target__c.field-meta.xml
<CustomField>
    <fullName>Workforce_cost_per_each_veh_Target__c</fullName>
    <label>Workforce cost per each veh(Target)_</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>