unpackaged/main/default/objects/ET_Workforce_Quote_Item__c/fields/Workforce_profit_per_each_veh_Discounte__c.field-meta.xml
<CustomField>
    <fullName>Workforce_profit_per_each_veh_Discounte__c</fullName>
    <label>Workforce profit per each veh(Discounte)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>